# SimplePathTracing

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Profile.txt  README.md  README_head.md  convert_ppm.py  generate_readme.py
source/: CMakeLists.txt
source/include/: camera.hpp  film.hpp  frame.hpp  material.hpp  model.hpp  plane.hpp  ray.hpp  rgb.hpp  scene.hpp  shape.hpp  sphere.hpp  spinlock.hpp  threadpool.hpp  triangle.hpp
source/include/accelerate/: bounds.hpp  bvh.hpp  scene_bvh.hpp
source/include/camera/: camera.hpp  film.hpp  ray.hpp
source/include/material/: conductor_material.hpp  dielectric_material.hpp  diffuse_material.hpp  ground_material.hpp  material.hpp  specular_material.hpp
source/include/renderer/: base_renderer.hpp  debug_renderer.hpp  normal_render.hpp  path_tracing_renderer.hpp  sample_rt_renderer.hpp
source/include/sample/: spherical.hpp
source/include/shape/: material.hpp  model.hpp  plane.hpp  scene.hpp  shape.hpp  sphere.hpp  triangle.hpp
source/include/thread/: spinlock.hpp  threadpool.hpp
source/include/utils/: complex.hpp  frame.hpp  profile.hpp  progress.hpp  rgb.hpp  rng.hpp
source/src/: camera.cpp  film.cpp  frame.cpp  main.cpp  model.cpp  plane.cpp  ray.cpp  scene.cpp  sphere.cpp  threadpool.cpp  triangle.cpp
source/src/accelerate/: bounds.cpp  bvh.cpp  scene_bvh.cpp
source/src/camera/: camera.cpp  film.cpp  ray.cpp
source/src/material/: conductor_material.cpp  dielectric_material.cpp  diffuse_material.cpp  ground_material.cpp  specular_material.cpp
source/src/renderer/: base_renderer.cpp  (+4 more)
(+9 files in other folders)
